--- a/HomePage.html
+++ b/HomePage.html
@@ -23,8 +23,8 @@
     </div>
   <div class="contentArea" id="contentArea">
     <div class="myName">
-      <div class="FirstName"><p>Walter</p></div>
-      <div class="SecondName"><p>Guo</p></div>
+      <div class="FirstName">Walter</div>
+      <div class="SecondName">Guo</div>
     </div>
   </div>
   <script>
