edit both files

--- a/HomePage.html
+++ b/HomePage.html
@@ -23,8 +23,13 @@
     </div>
   <div class="contentArea" id="contentArea">
     <div class="myName">
-      <div class="FirstName">Walter</div>
-      <div class="SecondName">Guo</div>
+      <div class="FirstName"><span>W</span><span>a</span><span>l</span><span>t</span><span>e</span><span>r</span></div>
+      <div class="SecondName"><span>G</span><span>u</span><span>o</span></div>
+    </div>
+    <div class="BlockArea">
+        <div class="FirstBlock">Skills</div>
+        <div class="SecondBlock">Experiences</div>
+        <div class="ThirdBlock">Contact</div>
     </div>
   </div>
   <script>
