--- a/HomePage.html
+++ b/HomePage.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Walter's</title>
-    <link rel="stylesheet" href="Letters.css">
+    <link rel="stylesheet" href="HomePage.css">
     <script src="https://kit.fontawesome.com/641ebe97e2.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -27,9 +27,9 @@
       <div class="SecondName"><span>G</span><span>u</span><span>o</span></div>
     </div>
     <div class="BlockArea">
-        <div class="FirstBlock">Skills</div>
-        <div class="SecondBlock">Experiences</div>
-        <div class="ThirdBlock">Contact</div>
+        <div class="blockWrapper"><div class="FirstBlock"><a href="SkillPage.html" target="_blank">Skill</a></div></div>
+        <div class="blockWrapper"><div class="SecondBlock"><a href="ExperiencePage.html">Experiences</a></div></div>
+        <div class="blockWrapper"><div class="ThirdBlock"><a href="ContactPage.html">Contact</a></div></div>
     </div>
   </div>
   <script>
