--- a/HomePage.html
+++ b/HomePage.html
@@ -27,9 +27,9 @@
       <div class="SecondName"><span>G</span><span>u</span><span>o</span></div>
     </div>
     <div class="BlockArea">
-        <div class="blockWrapper"><div class="FirstBlock"><a href="SkillPage.html" target="_blank">Skill</a></div></div>
-        <div class="blockWrapper"><div class="SecondBlock"><a href="ExperiencePage.html">Experiences</a></div></div>
-        <div class="blockWrapper"><div class="ThirdBlock"><a href="ContactPage.html">Contact</a></div></div>
+        <div class="blockWrapper"><a href="SkillPage.html"><div class="FirstBlock">Skill</div></a></div>
+        <div class="blockWrapper"><a href="ExperiencePage.html"><div class="SecondBlock">Experiences</div></a></div>
+        <div class="blockWrapper"><a href="ContactPage.html"><div class="ThirdBlock">Contact</div></a></div>
     </div>
   </div>
   <script>
