--- a/HomePage.html
+++ b/HomePage.html
@@ -13,10 +13,12 @@
     <div class="Letter"><button class="Logo">W</button></div>
         <div class="menu-open" id="menu-open"><button class="menu-open-button"><i class="fa-brands fa-codepen"></i></button>
           <div id="menuPanel" class="menu-panel">
-              <li><a href=""><i class="fa-solid fa-user"  style="font-size: xx-large; color: rgb(5, 168, 243)"></i></a></li>
-              <li><a href="https://www.linkedin.com/in/walter-guo-4a7779387/" target="_blank"><i class="fa-brands fa-linkedin" style="font-size: xx-large; color: rgb(5, 168, 243)"></i></a></li>
-              <li><a href="https://github.com/WalllerG" target="_blank"><i class="fa-brands fa-github"  style="font-size: xx-large; color: rgb(5, 168, 243);"></i></a></li>
-              <li><a href="https://www.instagram.com/walterrrrr.g/" target="_blank"><i class="fa-brands fa-square-instagram" style="font-size: xx-large; color: rgb(5, 168, 243);"></i></a></li>
+            
+              <span><a href=""><i class="fa-solid fa-user"  style="font-size: xx-large; color: rgb(227, 161, 7)"></i></a></span>
+              <span><a href="https://www.linkedin.com/in/walter-guo-4a7779387/" target="_blank"><i class="fa-brands fa-linkedin" style="font-size: xx-large; color: rgb(227, 161, 7)"></i></a></span>
+              <span><a href="https://github.com/WalllerG" target="_blank"><i class="fa-brands fa-github"  style="font-size: xx-large; color: rgb(227, 161, 7);"></i></a></span>
+              <span><a href="https://www.instagram.com/walterrrrr.g/" target="_blank"><i class="fa-brands fa-square-instagram" style="font-size: xx-large; color: rgb(227, 161, 7);"></i></a></span>
+            
           </div>
         </div>
       </div>
